[project]
name = "taxconverter"
dynamic = ["version"]
requires-python = "<3.12"
dependencies = [
    "pandas == 2.0.0",
    "numpy == 1.26.4",
    "loguru == 0.7.2",
]

[metadata]
authors = [
    {name="Svetlana Kutuzova", email="svegal@di.ku.dk"},
    {name="Jakob Nybo Nissen", email="jakob.nissen@sund.ku.dk"},
    {name="Lasse Schnell Danielsen", email="lasse.danielsen@sund.ku.dk"},
    {name="Simon Rasmussen", email="simon.rasmussen@cpr.ku.dk"}
]
url = "https://github.com/RasmussenLab/taxconverter"
description = "Unifies the presentation of taxonomic classifiers output"
long_description = "Unifies the presentation of taxonomic classifiers outputs. Works with Kraken2, MMSeqs2, Centrifuge, Metabuli."
license = "MIT"
[tool.setuptools.dynamic]
version = {attr = "taxconverter.__version__"}
readme = {file = "README.md"}

[build-system]
requires = ["setuptools ~= 63.0", "Cython ~= 0.29.5"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = ["E722", "E501"]

[project.scripts]
taxconverter = "taxconverter.__main__:main"

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
